# stdstates

./: CMakeLists.txt  README.md  package.xml
include/stdstates/: align_state.hpp  arming_state.hpp  goto_state.hpp  landing_state.hpp  takeoff_state.hpp
src/: takeoff_state.hpp
