<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stdstates</name>
  <version>0.1.0</version>
  <description>Standard reusable FSM states for eVTOL ITA drone projects (takeoff, landing, waypoints).</description>
  <maintainer email="angelo.marconi.pavan@gmail.com">Ângelo Marconi Pavan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>fsm</depend>
  <depend>drone_lib</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
